tests/query_errors/pipeline_duplicate_streams_inside/error.txt
Error: 
    4 |   create stream snot;  
      |   ^^^^^^^^^^^^^^^^^^ Can't declare the stream `snot` twice
